# nn_garden

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  genie.lua
bigg/include/: bigg.hpp
bigg/src/: bigg.cpp  bigg_imgui.hpp
data/: donut.csv  flat.csv  graph.json  imgui.ini  points_data.csv  spiral.csv
include/: computation_graph.h  context.h  edit_operation.h  graph_editor.h  imnodes.h  imnodes_internal.h  node_editor.h  value.h
scripts/: build_shader_win.bat  donut.csv  flat.csv  generate_datasets.py  spiral.csv  wavy.csv
src/: color_node_editor.cpp  computation_graph.cpp  context.cpp  edit_operation.cpp  graph_editor.cpp  imgui_canvas.cpp  imnodes.cpp  main.cpp  value.cpp
tests/: backprop_tests.cpp
